--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@mui/icons-material": "^5.14.12",
+    "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.12",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "helmet": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
