--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@livekit/components-react": "^1.5.3",
+    "@livekit/components-styles": "^1.0.9",
     "@mui/icons-material": "^5.14.12",
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.12",
+    "@mui/x-date-pickers": "^6.19.3",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,8 +22,10 @@
     "aos": "^2.3.4",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
+    "livekit-client": "^1.15.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
