--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "apexcharts": "^3.45.2",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
@@ -27,6 +28,7 @@
     "jwt-decode": "^4.0.0",
     "livekit-client": "^1.15.10",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
