--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.12",
     "@mui/x-date-pickers": "^6.19.3",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.24.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
