finished basic quiz structure

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": "src",
-    "jsx": "react"
+    "jsx": "react",
+    "allowImportingTsExtensions": true
   },
   "include": ["src"]
 }
