--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "livekit-client": "^1.15.10",
+    "media-icons": "^0.10.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
