--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
+    "emoji-picker-react": "^4.9.2",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "livekit-client": "^1.15.10",
