--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
