--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,5 +4,5 @@
     "jsx": "react",
     "allowImportingTsExtensions": true
   },
-  "include": ["src", "public/service-workers"]
+  "include": ["src", "public/service-workers", "src/Components/Chapters", "src/Components/Chapters"]
 }
