--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "@mui/material": "^5.14.12",
     "@mui/x-date-pickers": "^6.19.3",
     "@reduxjs/toolkit": "^1.9.7",
-
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
-
     "@tanstack/react-query": "^5.24.7",
     "@vidstack/react": "^1.10.9",
     "@wavesurfer/react": "^1.0.5",
@@ -31,6 +29,7 @@
     "dayjs": "^1.11.10",
     "emoji-picker-react": "^4.9.2",
     "formik": "^2.4.5",
+    "framer-motion": "^11.2.10",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -42,8 +41,10 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-typed": "^2.0.12",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
+   
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
@@ -73,10 +74,7 @@
     ]
   },
   "devDependencies": {
-
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.3"
-
-
   }
 }
